--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<main style="background-image: url('{{ asset("croixGrey.png") }}');">
+<main style="background-image: url('{{ asset("2023_Logo.png") }}');">
     <div id="faArrow" class="text-center">
         <i class="fa-solid fa-circle-arrow-down fa-bounce" style="color: #000000 #ffffff; font-size: 2.5rem;"></i>
     </div>
@@ -15,11 +15,11 @@
                     <div id="title-desc" class="d-flex flex-column justify-content-center align-items-center fade-in-left">
                         <h1 class="fst-italic">La Clunysoise</h1>
                         <div class="row">
-                            <span class="col-lg-4 countText fw-bold d-block text-black pe-4 text-center"><span class="count fw-bold">150 </span><br> Urgences / jour</span>
-                            <span class="col-lg-4 countText fw-bold d-block text-black pe-4 text-center"><span class="count fw-bold">200 </span><br> Interventions / jour</span>
-                            <span class="col-lg-4 countText fw-bold d-block text-black pe-4 text-center"><span class="count fw-bold">25 </span><br> Salariés</span>
+                            <span class="col-lg-4 countText fw-bold d-block text-black pe-4 text-center"><span class="count fw-bold">800 </span> à <span class="count fw-bold">900 </span><br> urgences par an en relation avec le 15</span>
+                            <span class="col-lg-4 countText fw-bold d-block text-black pe-4 text-center"><span class="count fw-bold">100 </span> à <span class="count fw-bold">130 </span><br> prises en charge quotidienne</span>
+                            <span class="col-lg-4 countText fw-bold d-block text-black pe-4 text-center"><span class="count fw-bold">26 </span><br> Salariés</span>
                         </div>
-                        <p class="text-center ps-3 pe-3">L'entreprise « La Clunysoise » est une société d'ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d'interventions d'urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d'appel 15.</p>
+                        <p class="text-center ps-3 pe-3">Nous sommes une entreprise prestataire de services médicaux ayant l'opportunité d'avoir un impact positif sur la vie des personnes. Notre équipe dévouée de professionnels de la santé s'engage à fournir des soins médicaux de qualité à ceux qui en ont besoin.</p>
                     </div>
 
                     {# Bouttons #}
@@ -74,7 +74,7 @@
                                 <span class="countText fw-bold d-block text-black"><span class="count fw-bold">4 </span><br> VSL</span>
                             </div>
                             <div class="carousel-item" data-bs-interval="2500">
-                                <span class="countText fw-bold d-block text-black"><span class="count fw-bold">11 </span><br> Taxis</span>
+                                <span class="countText fw-bold d-block text-black"><span class="count fw-bold">10 </span><br> Taxis</span>
                             </div>
                         </div>
                     </div>
