--- a/templates/main/joinUs.html.twig
+++ b/templates/main/joinUs.html.twig
@@ -38,14 +38,18 @@
 
 <div class="container-fluid pt-5 pb-5">
     <div class="row content fade-in-up" id="join_form">
-        <div class="col-lg-6 mt-5 sub-content text-center">
-            <a href="tel:+33385590487" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tél : 03 85 59 04 87</a><br>
-            <a href="tel:+33677658774" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tél : 06 77 65 87 74</a><br>
+        <div class="col-lg-6 text-center mt-5 p-3">
+            <p>
+                Nous sommes à la recherche de candidats motivés et passionnés pour rejoindre notre équipe.</br></br> 
+                Vous aurez la chance de collaborer avec une équipe engagée et expérimentée, où vous pourrez acquérir de nouvelles compétences et partager vos connaissances.</br></br> 
+                Si vous êtes passionné par votre travail et que vous souhaitez rejoindre une équipe dynamique, nous vous encourageons à postuler.
+            </p>
+            <a href="tel:+33385590487" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tél : 03 85 59 35 77</a><br>
+            <a href="tel:+33677658774" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tél : 06 88 24 60 06</a><br>
             <a href="geo:0,0?q=7+Avn.Pierre+le+Vénérable,71250+Cluny" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">7 Av. Pierre le Vénérable, 71250 Cluny</a>
         </div>
 
-        <div class="col-lg-6 mt-5 sub-content">
-            <h2 class="text-center">Formulaire de recrutement</h2>
+        <div class="col-lg-6 sub-content">
             {{ form_start(formulaire) }}
                 <div>
                     <div class="row">
