--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -4,7 +4,7 @@
     <footer class="row py-5 my-5 border-top justify-content-center" id="footer">
 
         <div class="col-lg-4 mb-3 p-col">
-            <a href="/"><img id="logo" src="{{ asset('footerLogo.png') }}"></a><br>
+            <a href="/"><img id="logo" src="{{ asset('2023_Logo.png') }}"></a><br>
             <p class="text-body-secondary">Tout droits réservés &copy; 2023</p>
         </div>
 
@@ -26,7 +26,8 @@
             <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="/notre-identite" class="nav-link p-0 text-body-secondary">Nos formations et certifications</a></li>
                     <li class="nav-item mb-2"><a href="/prise-en-charge" class="nav-link p-0 text-body-secondary">Prise en charge - Tarification</a></li>
-                    <li class="nav-item mb-2"><a href="rejoignez-nous#join_form" class="nav-link p-0 text-body-secondary">Nos offres de recrutement</a></li>
+                    <li class="nav-item mb-2"><a href="/rejoignez-nous#join_form" class="nav-link p-0 text-body-secondary">Nos offres de recrutement</a></li>
+                    <li class="nav-item mb-2"><a href="/notre-identite#become" class="nav-link p-0 text-body-secondary">Devenez chauffeur de taxi, ambulancier</a></li>
             </ul>
         </div>
 
