--- a/templates/main/aboutUs.html.twig
+++ b/templates/main/aboutUs.html.twig
@@ -8,11 +8,11 @@
         <div class="content">
             <div class="row col-lg-12 sub-content">
                 
-                <div class="row col-12">
+                <div class="row col-12 mt-5">
                     <h2 class="text-center">Nos engagements</h2></br>
                     <h4 class="text-center">Depuis 1999, nous nous engageons à fournir des services de transport sûrs, fiables et efficaces à nos clients.</h4>
 
-                    <div class="col-lg-6 col-sm-12 ps-2 pe-2">
+                    <div class="col-lg-6 col-sm-12 ps-2 pe-2 d-flex flex-column align-items-center justify-content-center">
                         <p>Nos chauffeurs sont formés pour s'occuper des patients avec attention et professionnalisme. Nous utilisons des véhicules modernes, confortable et équipés pour assurer le transport en toute sécurité et dans les meilleures conditions.<p>
                         <p>Nous opérons dans près de 75 communes.</p>
                     </div>
@@ -22,22 +22,22 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-sm-12 ps-2 pe-2">
+                <div class="col-lg-3 col-sm-12 ps-2 pe-2 mt-5">
                     <h4><i aria-hidden="true" class="fas fa-snowflake" id="about_i"></i> RESPECT ET BIENVEILLANCE :</h4>
                     <p>Nous valorisons chaque individu, en accordant une attention particulière à leurs besoins et en traitant chacun avec respect, empathie et courtoisie.</p>
                 </div>
 
-                <div class="col-lg-3 col-sm-12 ps-2 pe-2">
+                <div class="col-lg-3 col-sm-12 ps-2 pe-2 mt-5">
                     <h4><i aria-hidden="true" class="fas fa-user-nurse" id="about_i"></i> PROFESSIONNALISME :</h4>
                     <p>Notre personnel est formé pour offrir des prestations de haute qualité et se comporte de manière exemplaire en toutes circonstances.</p>
                 </div>
 
-                <div class="col-lg-3 col-sm-12 ps-2 pe-2">
+                <div class="col-lg-3 col-sm-12 ps-2 pe-2 mt-5">
                     <h4><i aria-hidden="true" class="fas fa-shield-virus" id="about_i"></i> SECURITE :</h4>
                     <p>Nous prenons toutes les mesures nécessaires pour assurer la sécurité. Cela comprend des contrôles rigoureux, une maintenance régulière de nos véhicules et le respect des normes de sécurité.</p>
                 </div>
 
-                <div class="col-lg-3 col-sm-12 ps-2 pe-2">
+                <div class="col-lg-3 col-sm-12 ps-2 pe-2 mt-5">
                     <h4><i aria-hidden="true" class="fas fa-stopwatch" id="about_i"></i> PONCTUALITE :</h4>
                     <p>Nous planifions nos trajets avec soin et nous nous assurons d’arriver à destination à temps, en minimisant les retards autant que possible.</p>
                 </div>
