--- a/templates/main/aboutUs.html.twig
+++ b/templates/main/aboutUs.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-<section class="pages-section" style="background-image: url('{{ asset("croixGrey.png") }}');">
-    <h1 class="titles-top fst-italic fw-bolder text-center">Notre identité</h1>
+<section class="pages-section" style="background-image: url('{{ asset("LOGO_L.png") }}');">
+    <h1 class="titles-top fst-italic fw-bolder text-center"></h1>
 
 
     <div class="container-fluid fade-in-up" id="about-desc">
