--- a/templates/main/appointment.html.twig
+++ b/templates/main/appointment.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-<section class="pages-section" style="background-image: url('{{ asset("croixGrey.png") }}');">
+<section class="pages-section" style="background-image: url('{{ asset("LOGO_L.png") }}');">
     <h1 class="titles-top fst-italic fw-bolder text-center">Vos rendez-vous</h1>
     <div class="container container-fluid pt-5 pb-5">
         <div class="row row content">
