--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<main style="background-image: url('{{ asset("2023_Logo.png") }}');">
+<main style="background-image: url('{{ asset("LOGO_L.png") }}');">
     <div id="faArrow" class="text-center">
         <i class="fa-solid fa-circle-arrow-down fa-bounce" style="color: #000000 #ffffff; font-size: 2.5rem;"></i>
     </div>
