--- a/templates/main/joinUs.html.twig
+++ b/templates/main/joinUs.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-<section class="pages-section" style="background-image: url('{{ asset("croixGrey.png") }}');">
+<section class="pages-section" style="background-image: url('{{ asset("LOGO_L.png") }}');">
     <h1 class="titles-top fst-italic fw-bolder text-center">Rejoignez-nous</h1>
 
 {# initialise une variable counter à 0. Ce compteur sera utilisé pour suivre le nombre d'itérations dans la boucle et déterminer si l'élément actuel doit être affiché à gauche ou à droite. #}
@@ -46,7 +46,7 @@
             </p>
             <a href="tel:+33385590487" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tél : 03 85 59 35 77</a><br>
             <a href="tel:+33677658774" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tél : 06 88 24 60 06</a><br>
-            <a href="geo:0,0?q=7+Avn.Pierre+le+Vénérable,71250+Cluny" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">7 Av. Pierre le Vénérable, 71250 Cluny</a>
+            <a href="geo:0,0?q=7+Avn.Pierre+le+Vénérable,71250+Cluny" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">7 av. Pierre le Vénérable, 71250 Cluny</a>
         </div>
 
         <div class="col-lg-6 sub-content">
