--- a/templates/main/supportPricing.html.twig
+++ b/templates/main/supportPricing.html.twig
@@ -6,7 +6,7 @@
 
     {# vérifie si la valeur de counter est divisible par 2. Si c'est le cas, cela signifie que nous sommes en train d'itérer sur un élément pair dans la liste. Le contenu à l'intérieur de cette condition sera affiché du côté gauche. #}
     {% if counter is divisible by(2) %}
-    <section class="pages-section" style="background-image: url('{{ asset("croixGrey.png") }}');">
+    <section class="pages-section" style="background-image: url('{{ asset("LOGO_L.png") }}');">
         <h1 class="titles-top fst-italic fw-bolder text-center">Prise en charge - Tarification</h1>
         <div class="container-fluid pt-5 pb-5">
             <div class="row content">
