--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -24,9 +24,9 @@
             <h5>Informations</h5>
             <hr class="border border-white opacity-100 border-1">
             <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="/notre-identite#become" class="nav-link p-0 text-body-secondary">Nos formations et certifications</a></li>
                     <li class="nav-item mb-2"><a href="/prise-en-charge" class="nav-link p-0 text-body-secondary">Prise en charge - Tarification</a></li>
                     <li class="nav-item mb-2"><a href="/rejoignez-nous#join_form" class="nav-link p-0 text-body-secondary">Nos offres de recrutement</a></li>
-                    <li class="nav-item mb-2"><a href="/notre-identite#become" class="nav-link p-0 text-body-secondary">Devenez chauffeur de taxi, ambulancier</a></li>
             </ul>
         </div>
 
